--- a/app/assets/stylesheets/_lobby.scss
+++ b/app/assets/stylesheets/_lobby.scss
@@ -113,3 +113,31 @@
         text-decoration: underline;
     }
 }
+
+.players__title {
+    font-size: 60px;
+    font-variant: small-caps;
+    color: #CDD042;
+    -webkit-text-stroke-color: #A5A728;
+    -webkit-text-stroke-width: 1px;
+}
+
+.players__list {
+    direction: row;
+    list-style-type: none;
+    margin: 0;
+    text-align: center;
+    font-size: 40px;
+    font-variant: small-caps;
+    color: #CDD042;
+    -webkit-text-stroke-color: #A5A728;
+    -webkit-text-stroke-width: 1px;
+    border-top: 2px groove;
+    padding: 30px;
+}
+
+.players__list--current_player {
+    color: #60D394;
+    -webkit-text-stroke-color: #4FAD7A;
+    -webkit-text-stroke-width: 0.75px;
+}
