WIP: implementing pusher

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,10 +1,13 @@
-DOCTYPE
+doctype html
 html
   head
     title Go Fish
-    
+
     meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     = stylesheet_link_tag 'application'
+
+    = javascript_include_tag "https://js.pusher.com/4.3/pusher.min.js"
+    = javascript_include_tag "/assets/pusher.js"
 
   body
     div.container
