--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
 
     = javascript_include_tag "https://js.pusher.com/4.3/pusher.min.js"
     = javascript_include_tag "/assets/pusher.js"
+    = javascript_pack_tag "application"
 
   body
     div.container
