--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -22,3 +22,42 @@
     justify-content: start;
     position: relative;
 }
+
+.current-player__hand {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+}
+
+.current-player__info {
+    color: #CDD042;
+    -webkit-text-stroke-color: #A5A728;
+    -webkit-text-stroke-width: 0.5px;
+    font-size: 25px;
+    font-variant: small-caps;
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.hand--card-list {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-around;
+    list-style-type: none;
+}
+
+.hand--card-item {
+    height: auto;
+    min-height: 150px;
+    width: auto;
+    min-width: 100px;
+}
