--- a/app/views/games/play.html.slim
+++ b/app/views/games/play.html.slim
@@ -1,4 +1,3 @@
-.game
-  = render partial: 'navbar'
+= render partial: 'navbar'
 
-  = react_component("Game", game.state_for(current_user))
+= react_component("GameView", game.state_for(current_user))
