cards in player hand render successfully

--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -61,3 +61,13 @@
     width: auto;
     min-width: 100px;
 }
+
+.card--list {
+    position: absolute;
+}
+
+.card {
+    left: 10px;
+    position: absolute;
+    list-style: none;
+}
