--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -1,3 +1,19 @@
+$ranks: a k q j 10 9 8 7 6 5 4 3 2;
+$suits: s c d h;
+
+@each $rank in $ranks {
+  @each $suit in $suits {
+    .#{$suit}#{$rank} {
+      background-image: image_url("/assets/cards/#{$suit}#{$rank}.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      width: 100px;
+      height: 100px;
+    }
+  }
+}
+
 .game {
     background: linear-gradient(to top, #47E5BC, #C4D7F2);
     border: solid 2px #A5A728;
