--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -4,12 +4,15 @@ $suits: s c d h;
 @each $rank in $ranks {
   @each $suit in $suits {
     .#{$suit}#{$rank} {
+      background: none;
+      border: none;
       background-image: image_url("/assets/cards/#{$suit}#{$rank}.png");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
       width: 100px;
       height: 100px;
+      cursor: pointer;
     }
   }
 }
@@ -25,6 +28,20 @@ $suits: s c d h;
     align-items: center;
     border-radius: 50px;
     overflow: auto;
+}
+
+.opponent {
+    background: linear-gradient(#E0E28E, #B3B560);
+    border: solid 2px #6FB074;
+    color: #7A6F9B;
+    font-variant: small-caps;
+    height: 110px;
+    width: 110px;
+    border-radius: 55px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .table {
@@ -86,4 +103,15 @@ $suits: s c d h;
     left: 10px;
     position: absolute;
     list-style: none;
+}
+
+.hidden {
+    visibility: hidden;
+    &:checked + label {
+        outline-style: solid;
+    }
+}
+
+.hidden + label {
+    cursor: pointer;
 }
