selected player and rank added to game view state

--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -107,11 +107,11 @@ $suits: s c d h;
 
 .hidden {
     visibility: hidden;
-    &:checked + label {
+    &:checked + .opponent {
         outline-style: solid;
     }
 }
 
-.hidden + label {
+.hidden + .opponent {
     cursor: pointer;
 }
