--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -1,29 +1,33 @@
-.lobby
-  = render partial: 'navbar'
+= render partial: 'navbar'
 
-  .back--link
-    = link_to 'Back', games_path
+- if @game.data['started']
+  = render partial: 'play'
 
-  h2.players__title Players:
-  ul.players__list
-    - players.each do |player|
-      - if player == current_player.name
-        li.players__list--current_player = player
+- else
+  .lobby
+    .back--link
+      = link_to 'Back', games_path
+
+    h2.players__title Players:
+    ul.players__list
+      - @game.players.each do |player|
+        - if player == @current_user.name
+          li.players__list--current_player = player
+
+        - else
+          li = player
+
+    - if @game.host == @current_user.id
+      - if @game.players.length == 1
+        p.game-message Waiting for other players to join!
 
       - else
-        li = player
-
-  - if host == current_player.id
-    - if players.length == 1
-      p.game-message Waiting for other players to join!
+        = button_to 'Start Game', game_path, method: :patch
 
     - else
-      = button_to 'Start Game', game_path, method: :patch
+      - if @game.players.any? { |player| player == @current_user.name }
+        p.game-message Waiting for host to start game!
 
-  - else
-    - if players.any? { |player| player == current_player.name }
-      p.game-message Waiting for host to start game!
-
-    - else
-      form action="/games" method="post"
-        button type="submit" name="id" value="#{id}" Join
+      - else
+        form action="/games" method="post"
+          button type="submit" name="id" value="#{@game.id}" Join
