--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -122,3 +122,21 @@ $suits: s c d h;
 .hidden + .opponent {
     cursor: pointer;
 }
+
+.game-over--title {
+    font-size: 50px;
+    font-variant: small-caps;
+    top: 20px;
+    color: #CDD042;
+    -webkit-text-stroke-color: #A5A728;
+    -webkit-text-stroke-width: 1px;
+}
+
+.game-over--message {
+    font-size: 50px;
+    font-variant: small-caps;
+    margin-top: -50px;
+    color: #CDD042;
+    -webkit-text-stroke-color: #A5A728;
+    -webkit-text-stroke-width: 1px;
+}
