opponents and cards are no longer clickable when it is not users turn

--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -12,7 +12,6 @@ $suits: s c d h;
       background-position: center;
       width: 100px;
       height: 100px;
-      cursor: pointer;
     }
   }
 }
@@ -121,6 +120,10 @@ $suits: s c d h;
 
 .hidden + .opponent {
     cursor: pointer;
+}
+
+.hidden + .card--list {
+  cursor: pointer;
 }
 
 .game-over--title {
