--- a/app/assets/stylesheets/_game.scss
+++ b/app/assets/stylesheets/_game.scss
@@ -143,3 +143,13 @@ $suits: s c d h;
     -webkit-text-stroke-color: #A5A728;
     -webkit-text-stroke-width: 1px;
 }
+
+.play {
+    text-align: center;
+    margin-top: -15px;
+    font-size: 25px;
+    font-variant: small-caps;
+    color: #CDD042;
+    -webkit-text-stroke-color: #A5A728;
+    -webkit-text-stroke-width: 0.5px;
+}
